--- a/views/includes/guest/header.ejs
+++ b/views/includes/guest/header.ejs
@@ -31,7 +31,7 @@
         }
 
         .btn {
-          @apply px-4 py-2 rounded-full transition duration-200 border hover:bg-gray-200 focus:ring focus:ring-offset-2 focus:ring-gray-500
+          @apply px-4 py-2 text-center rounded-full transition duration-200 border hover:bg-gray-200 focus:ring focus:ring-offset-2 focus:ring-gray-500
         }
 
         .btn-primary {
