UPDATE: design user dashboard

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,6 +1,6 @@
 <%- include('../includes/guest/header.ejs') %>
 
-<body class="h-screen w-full overflow-none flex">
+<body class="h-screen w-full overflow-hidden flex">
 
     <div class="w-1/2 bg-secondary h-full hidden md:flex flex-col space-y-10 items-center justify-center container py-10">
         <img src="/images/login.svg" alt="Login" class="w-3/4">
