--- a/views/includes/guest/header.ejs
+++ b/views/includes/guest/header.ejs
@@ -14,8 +14,15 @@
 
   <style type="text/tailwindcss">
     @layer utilities {
+      * {
+        box-sizing: border-box;
+      }
+
         body {
+          padding: 0;
+          margin: 0;
           font-family: 'Lato', sans-serif;
+          @apply flex flex-col items-center
         }
         
         .form-control {
@@ -36,6 +43,10 @@
 
         .btn-primary {
           @apply bg-primary hover:bg-primary/90 text-white !border-none focus:!ring-primary
+        }
+
+        .btn-secondary {
+          @apply bg-secondary hover:bg-secondary/90 text-white !border-none focus:!ring-secondary
         }
       }
     </style>
