--- a/views/includes/guest/header.ejs
+++ b/views/includes/guest/header.ejs
@@ -37,6 +37,10 @@
           @apply px-4 py-2 mt-1 border transition duration-200 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary w-full
         }
 
+        .form-control select {
+          @apply mt-1 block w-full bg-white border border-gray-300 rounded-full py-2 px-4 leading-tight focus:outline-none focus:border-primary focus:ring-2 focus:ring-offset-2 focus:ring-primary
+        }
+
         .btn {
           @apply px-4 py-2 text-center rounded-full transition duration-200 border hover:bg-gray-200 focus:ring focus:ring-offset-2 focus:ring-gray-500
         }
