--- a/views/user/polls/index.ejs
+++ b/views/user/polls/index.ejs
@@ -1,8 +1,8 @@
-<%- include('../includes/guest/header.ejs') %>
+<%- include('../../includes/guest/header.ejs') %>
 
 <body>
 
-    <%- include('../includes/guest/navigation.ejs') %>
+    <%- include('../../includes/guest/navigation.ejs') %>
 
     <div class="container py-4">
         <div class="flex space-x-4 items-center">
@@ -43,5 +43,5 @@
 
 </body>
 
-<%- include('../includes/guest/footer.ejs') %>
+<%- include('../../includes/guest/footer.ejs') %>
 
