--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,20 +1,81 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="/js/tailwind.js"></script>
+<%- include('./includes/guest/header.ejs') %>
 
-    <style type="text/tailwindcss">
-      @layer utilities {
-        
-      }
-    </style>
-  </head>
-  <body class="flex space-x-3 items-center">
-    <h1 class="text-clifford"><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <p class="text-xl text-blue-500">This is what I updated</p>
-    <h3 class="text-orange-300">A new development</h3>
+  <body>
+
+    <%- include('./includes/guest/navigation.ejs') %>
+
+      <div class="container py-4 space-y-6">
+
+        <form action="/" method="POST">
+          <div class="form-control">
+
+            <label for="search">Search for polls</label>
+            <input type="search" name="search" id="search" placeholder="Enter search keywords" class="bg-gray-100">
+
+          </div>
+        </form>
+
+        <div>
+          <div class="grid lg:grid-cols-2 gap-6">
+
+            <% for (let i=1; i <=10; i++) { %>
+
+              <div class="w-full bg-gray-100 rounded-xl flex space-x-4 min-h-60 h-auto p-4">
+
+                <div class="h-full w-1/2 sm:w-1/3 overflow-hidden rounded-xl">
+                  <img src="/images/poll-image.jpg" alt="Poll Image" class="w-full h-full object-cover object-center">
+                </div>
+
+                <div class="space-y-6 sm:space-y-4 w-1/2 sm:w-auto">
+                  <div class="flex flex-col space-y-4 sm:flex-row sm:space-x-4 sm:space-y-0 sm:items-center sm:justify-between">
+                    <div>
+                      <p class="text-lg font-semibold">How do you prefer to spend your weekends?</p>
+                      <p class="font-light">Created by <strong>John Doe</strong></p>
+                    </div>
+                    <button class="btn btn-primary">Vote</button>
+                  </div>
+
+                  <p><i>Ends in 2 days</i></p>
+
+                  <div class="flex flex-col space-y-2 sm:space-y-0 sm:flex-row sm:justify-between sm:items-end sm:space-x-4">
+                    <div class="sm:w-1/2">
+                      <span>#lifestyle, #news, #music, #survey,</span>
+                    </div>
+                    <div class="flex flex-col sm:items-end space-y-2">
+                      <p class="font-light">Total Votes: <strong>54</strong></p>
+                      <button class="btn btn-secondary">Share Poll</button>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <!-- <div class="rounded-xl border border-gray-200">
+                    <div class="w-full h-48 rounded-xl overflow-hidden">
+                        <img src="/images/poll-image.jpg" alt="Poll Image" class="w-full h-full">
+                    </div>
+
+                    <div class="p-3 space-y-2">
+                        <p class="text-lg font-semibold">How do you prefer to spend your weekends?</p>
+                        <p class="text-sm font-light">Created 11 November, 2023</p>
+
+                        <div class="flex space-x-2 justify-end">
+                            <a href="/user/polls/<%= i %>/edit">
+                                <img src="/images/pencil-square.svg" alt="Edit" class="w-6 text-secondary">
+                            </a>
+                            <button>
+                                <img src="/images/trash.svg" alt="Delete" class="w-6">
+                            </button>
+                        </div>
+                    </div>
+                </div> -->
+              <% } %>
+
+          </div>
+        </div>
+
+      </div>
+
   </body>
-</html>
+
+  <%- include('./includes/guest/footer.ejs') %>
