--- a/views/user/polls/index.ejs
+++ b/views/user/polls/index.ejs
@@ -15,7 +15,7 @@
 
                             <div class="rounded-xl border border-gray-200">
                                 <div class="w-full h-48 rounded-xl overflow-hidden">
-                                    <img src="/images/poll-image.jpg" alt="Poll Image" class="w-full h-full">
+                                    <img src="/images/poll-image.jpg" alt="Poll Image" class="w-full h-full object-cover object-center">
                                 </div>
 
                                 <div class="p-3 space-y-2">
