--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,14 +22,14 @@
 
               <div class="w-full bg-gray-100 rounded-xl flex space-x-4 min-h-60 h-auto p-4">
 
-                <div class="h-full w-1/2 sm:w-1/3 overflow-hidden rounded-xl">
+                <a href="/<%= i %>" class="h-full w-1/2 sm:w-1/3 overflow-hidden rounded-xl">
                   <img src="/images/poll-image.jpg" alt="Poll Image" class="w-full h-full object-cover object-center">
-                </div>
+                </a>
 
                 <div class="space-y-6 sm:space-y-4 w-1/2 sm:w-auto">
                   <div class="flex flex-col space-y-4 sm:flex-row sm:space-x-4 sm:space-y-0 sm:items-center sm:justify-between">
                     <div>
-                      <p class="text-lg font-semibold">How do you prefer to spend your weekends?</p>
+                      <a href="/<%= i %>" class="text-lg font-semibold">How do you prefer to spend your weekends?</a>
                       <p class="font-light">Created by <strong>John Doe</strong></p>
                     </div>
                     <button class="btn btn-primary">Vote</button>
@@ -49,26 +49,6 @@
                 </div>
 
               </div>
-
-              <!-- <div class="rounded-xl border border-gray-200">
-                    <div class="w-full h-48 rounded-xl overflow-hidden">
-                        <img src="/images/poll-image.jpg" alt="Poll Image" class="w-full h-full">
-                    </div>
-
-                    <div class="p-3 space-y-2">
-                        <p class="text-lg font-semibold">How do you prefer to spend your weekends?</p>
-                        <p class="text-sm font-light">Created 11 November, 2023</p>
-
-                        <div class="flex space-x-2 justify-end">
-                            <a href="/user/polls/<%= i %>/edit">
-                                <img src="/images/pencil-square.svg" alt="Edit" class="w-6 text-secondary">
-                            </a>
-                            <button>
-                                <img src="/images/trash.svg" alt="Delete" class="w-6">
-                            </button>
-                        </div>
-                    </div>
-                </div> -->
               <% } %>
 
           </div>
