UPDATE: design voters page

--- a/views/includes/guest/navigation.ejs
+++ b/views/includes/guest/navigation.ejs
@@ -1,8 +1,8 @@
 <nav class="container flex justify-between items-center py-4">
-    <img src="/images/logo.svg" alt="PinVote" class="w-60">
+    <a href="/"><img src="/images/logo.svg" alt="PinVote" class="w-60"></a>
 
     <div class="flex items-center space-x-4">
         <a href="/auth/create-account" class="btn btn-primary">Create account</a>
-        <a href="/auth/create-account" class="btn">Login</a>
+        <a href="/auth/login" class="btn">Login</a>
     </div>
 </nav>
