--- a/views/polls/index.ejs
+++ b/views/polls/index.ejs
@@ -1,8 +1,8 @@
-<%- include('./includes/guest/header.ejs') %>
+<%- include('../includes/guest/header.ejs') %>
 
   <body>
 
-    <%- include('./includes/guest/navigation.ejs') %>
+    <%- include('../includes/guest/navigation.ejs') %>
 
       <div class="container py-4 space-y-6">
 
@@ -58,4 +58,4 @@
 
   </body>
 
-  <%- include('./includes/guest/footer.ejs') %>
+  <%- include('../includes/guest/footer.ejs') %>
