--- a/views/user/polls/index.ejs
+++ b/views/user/polls/index.ejs
@@ -14,7 +14,7 @@
                         <% for (let i=1; i <=10; i++) { %>
 
                             <div class="rounded-xl border border-gray-200">
-                                <a href="/<%= i %>" class="w-full h-48 rounded-xl overflow-hidden">
+                                <a href="/<%= i %>" class="block w-full h-48 rounded-xl overflow-hidden">
                                     <img src="/images/poll-image.jpg" alt="Poll Image" class="w-full h-full object-cover object-center">
                                 </a>
 
