--- a/views/includes/user/menu.ejs
+++ b/views/includes/user/menu.ejs
@@ -1,7 +1,7 @@
 <div class="container py-4">
     <div class="flex space-x-4 items-center">
         <img src="https://ui-avatars.com/api/?name=F+M&color=FFFFFF&background=590D82"
-            alt="Freeman Madudili" class="w-20 h-20 rounded-full">
+            alt="User PFP" class="w-20 h-20 rounded-full">
 
         <div>
             <h2 class="text-xl font-semibold">Welcome Back, Freeman!</h2>
@@ -10,5 +10,5 @@
 
     <div class="flex justify-end space-x-4">
         <a href="/user/polls/create" class="btn btn-primary">Create Poll</a>
-        <a href="/polls" class="btn btn-secondary">View Polls</a>
+        <a href="/" class="btn btn-secondary">View Polls</a>
     </div>
