--- a/views/auth/reset-password.ejs
+++ b/views/auth/reset-password.ejs
@@ -25,8 +25,8 @@
                     </div>
 
                     <div class="form-control">
-                        <label for="password_confirmation">Confirm Password</label>
-                        <input type="password" name="password_confirmation" id="password_confirmation" placeholder="Re-enter your new password">
+                        <label for="confirmPassword">Confirm Password</label>
+                        <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Re-enter your new password">
                     </div>
 
                     <div class="pt-2">
