--- a/views/auth/create-account.ejs
+++ b/views/auth/create-account.ejs
@@ -17,37 +17,37 @@
             <div class="w-full md:w-5/6 lg:w-4/5 xl:w-3/5 mx-auto flex flex-col md:justify-center">
                 <h1 class="text-3xl font-bold text-primary">Create an account</h1>
 
-                <% if (errorMessage) { %>
-                    <div class=" mt-2 py-2 px-4 text-sm border-red-400 text-red-500 bg-red-200 rounded-full w-full">
-                        <%= errorMessage %>
-                    </div>
-                <% } %>
 
                 <form method="POST" action="/auth/create-account" class="w-full mt-6 space-y-4">
                     
                     <div class="form-control">
                         <label for="firstName">First name</label>
-                        <input type="text" name="firstName" id="firstName" placeholder="Enter your first name">
+                        <input type="text" name="firstName" id="firstName" placeholder="Enter your first name" value="<%= formData?.firstName %>">
+                        <small class="text-red-500"><%= errors?.firstName %></small>
                     </div>
 
                     <div class="form-control">
                         <label for="lastName">Last name</label>
-                        <input type="text" name="lastName" id="lastName" placeholder="Enter your last name">
+                        <input type="text" name="lastName" id="lastName" placeholder="Enter your last name" value="<%= formData?.lastName %>">
+                        <small class="text-red-500"><%= errors?.lastName %></small>
                     </div>
 
                     <div class="form-control">
                         <label for="email">Email address</label>
-                        <input type="email" name="email" id="email" placeholder="Enter your email address">
+                        <input type="email" name="email" id="email" placeholder="Enter your email address" value="<%= formData?.email %>">
+                        <small class="text-red-500"><%= errors?.email %></small>
                     </div>
 
                     <div class="form-control">
                         <label for="password">Password</label>
                         <input type="password" name="password" id="password" placeholder="Enter your password">
+                        <small class="text-red-500"><%= errors?.password %></small>
                     </div>
 
                     <div class="form-control">
                         <label for="confirmPassword">Confirm Password</label>
                         <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Re-enter your password">
+                        <small class="text-red-500"><%= errors?.confirmPassword %></small>
                     </div>
 
                     <div class="pt-2">
