--- a/views/auth/create-account.ejs
+++ b/views/auth/create-account.ejs
@@ -17,6 +17,12 @@
             <div class="w-full md:w-5/6 lg:w-4/5 xl:w-3/5 mx-auto flex flex-col md:justify-center">
                 <h1 class="text-3xl font-bold text-primary">Create an account</h1>
 
+                <% if (errors?.global) { %>
+
+                    <div class="mt-4 px-4 py-2 bg-red-400 text-red-700"><%= errors.global %></div>
+
+                <% } %>
+
 
                 <form method="POST" action="/auth/create-account" class="w-full mt-6 space-y-4">
                     
