--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -23,6 +23,12 @@
 
                 <% } %>
 
+                <% if (info !== null) { %>
+
+                    <div class="mt-4 px-4 py-2 bg-blue-100 rounded-full border-blue-500 text-blue-700"><%= %></div>
+
+                <% } %>
+
                 <form action="/auth/login" method="post" class="w-full mt-6 space-y-4">
 
                     <div class="form-control">
