--- a/views/includes/guest/navigation.ejs
+++ b/views/includes/guest/navigation.ejs
@@ -2,7 +2,13 @@
     <a href="/"><img src="/images/logo.svg" alt="PinVote" class="w-60"></a>
 
     <div class="flex items-center space-x-4">
+        <% if (!authenticated) { %>
         <a href="/auth/create-account" class="btn btn-primary">Create account</a>
         <a href="/auth/login" class="btn">Login</a>
+        <% } else { %>
+            <form action="/auth/logout" method="POST">
+                <button class="btn btn-primary">Logout</button>
+            </form>
+        <% } %>
     </div>
 </nav>
