UPDATE: Implement password reset

--- a/views/auth/forgot-password.ejs
+++ b/views/auth/forgot-password.ejs
@@ -17,6 +17,8 @@
             <div class="w-full md:w-5/6 lg:w-4/5 xl:w-3/5 mx-auto flex flex-col items-stretch md:justify-center">
                 <h1 class="text-3xl font-bold text-primary">Forgot Password?</h1>
 
+                <%- include('../includes/alert.ejs') %>
+
                 <form action="/auth/forgot-password" method="POST" class="w-full mt-6 space-y-4">
 
                     <div class="form-control">
