--- a/views/auth/reset-password.ejs
+++ b/views/auth/reset-password.ejs
@@ -17,16 +17,37 @@
             <div class="w-full md:w-5/6 lg:w-4/5 xl:w-3/5 mx-auto flex flex-col items-stretch md:justify-center">
                 <h1 class="text-3xl font-bold text-primary">Reset Password</h1>
 
-                <form action="" class="w-full mt-6 space-y-4">
+                <%- include('../includes/alert.ejs') %>
+
+                <% if (queryParamErrors?.token || queryParamErrors?.email || errors?.token || errors?.email) { %>
+
+                    <ul class="mt-4 px-6 py-2 bg-red-100 rounded-full border-red-500 text-red-700 list-disc">
+                        <% if (queryParamErrors?.token || errors?.token) { %>
+                            <li><%= queryParamErrors?.token || errors?.token %></li>
+                        <% } %>
+
+                        <% if (queryParamErrors?.email || errors?.email) { %>
+                            <li><%= queryParamErrors?.email || errors?.email %></li>
+                        <% } %>
+                    </ul>
+                
+                <% } %>
+
+                <form action="/auth/reset-password" method="POST" class="w-full mt-6 space-y-4">
+
+                    <input type="hidden" name="token" value="<%= queryData.token %>" />
+                    <input type="hidden" name="email" value="<%= queryData.email %>" />
 
                     <div class="form-control">
                         <label for="password">New Password</label>
                         <input type="password" name="password" id="password" placeholder="Enter your new password">
+                        <small class="text-red-500"><%= errors?.password %></small>
                     </div>
 
                     <div class="form-control">
                         <label for="confirmPassword">Confirm Password</label>
                         <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Re-enter your new password">
+                        <small class="text-red-500"><%= errors?.confirmPassword %></small>
                     </div>
 
                     <div class="pt-2">
