--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -17,17 +17,7 @@
             <div class="w-full md:w-5/6 lg:w-4/5 xl:w-3/5 mx-auto flex flex-col items-stretch md:justify-center">
                 <h1 class="text-3xl font-bold text-primary">Login</h1>
 
-                <% if (errors?.global) { %>
-
-                    <div class="mt-4 px-4 py-2 bg-red-100 rounded-full border-red-500 text-red-700"><%= errors.global %></div>
-
-                <% } %>
-
-                <% if (info !== null) { %>
-
-                    <div class="mt-4 px-4 py-2 bg-blue-100 rounded-full border-blue-500 text-blue-700"><%= %></div>
-
-                <% } %>
+                <%- include('../includes/alert.ejs') %>
 
                 <form action="/auth/login" method="post" class="w-full mt-6 space-y-4">
 
