--- a/views/includes/user/menu.ejs
+++ b/views/includes/user/menu.ejs
@@ -4,7 +4,7 @@
             alt="User PFP" class="w-20 h-20 rounded-full">
 
         <div>
-            <h2 class="text-xl font-semibold">Welcome Back, Freeman!</h2>
+            <h2 class="text-xl font-semibold">Welcome Back, <%= user.firstName %>!</h2>
         </div>
     </div>
 
