--- a/views/user/polls/index.ejs
+++ b/views/user/polls/index.ejs
@@ -20,7 +20,7 @@
                                 <% for (let poll of polls) { %>
 
                                     <div class="rounded-xl border border-gray-200">
-                                        <a href="/<%= poll._id %>" class="block w-full h-48 rounded-xl overflow-hidden">
+                                        <a href="/polls/<%= poll._id %>" class="block w-full h-48 rounded-xl overflow-hidden">
                                             <img src="/images/poll-image.jpg" alt="Poll Image"
                                                 class="w-full h-full object-cover object-center">
                                         </a>
