--- a/views/polls/view.ejs
+++ b/views/polls/view.ejs
@@ -10,10 +10,10 @@
                     <div class="rounded-xl w-full h-60 overflow-hidden">
                         <img src="/images/poll-image.jpg" alt="Poll Image" class="w-full h-full object-cover object-center">
                     </div>
-                    <p class="italic">Ends in 2 days</p>
+                    <p class="italic">Ends <%= poll.endDate %></p>
                 </div>
 
-                <h1 class="text-3xl">How do you prefer to spend your weekends?</h1>
+                <h1 class="text-3xl"><%= poll.question %></h1>
 
                 <div class="flex space-x-4 items-center justify-between">
 
@@ -21,12 +21,12 @@
                             <img src="https://ui-avatars.com/api/?name=F+M&color=FFFFFF&background=590D82"
                                 alt="Freeman Madudili" class="w-14 h-14 rounded-full">
 
-                            <span class="font-light">Created by <strong>John Doe</strong></span>
+                            <span class="font-light">Created by <strong><%= poll.user.fullName %></strong></span>
                         </div>
 
                         <div class="flex flex-col items-end space-y-2">
                             <p>Total Votes: <strong>50</strong></p>
-                                <a href="/<%= id %>/voters" class="btn">Voters / Results</a>
+                                <a href="/polls/<%= poll._id %>/voters" class="btn">Voters / Results</a>
                         </div>
                 </div>
 
@@ -35,14 +35,12 @@
     <h2 class="text-xl font-semibold mb-4">Select an option to vote:</h2>
   
     <div class="flex flex-col space-y-4" id="pollOptions">
-      <div class="poll-option bg-white border rounded p-4 cursor-pointer transition duration-300 ease-in-out flex justify-between" onclick="selectOption(this)">
-        <span>Option 1</span>
-        <span>(13 votes)</span>
-      </div>
-      <div class="poll-option bg-white border rounded p-4 cursor-pointer transition duration-300 ease-in-out flex justify-between" onclick="selectOption(this)">
-        <span>Option 2</span>
-        <span>(37 votes)</span>
-      </div>
+        <% for (let option of poll.options) { %>
+        <div class="poll-option bg-white border rounded p-4 cursor-pointer transition duration-300 ease-in-out flex justify-between" onclick="selectOption(this)">
+            <span><%= option %></span>
+            <span>(13 votes)</span>
+        </div>
+      <% } %>
       
     </div>
   </div>
