--- a/views/user/polls/edit.ejs
+++ b/views/user/polls/edit.ejs
@@ -15,50 +15,84 @@
                     <div class="max-w-xl">
                         <h1 class="text-3xl font-bold text-primary">Edit Poll #<%= id %></h1>
 
-                        <form id="pollForm" action="/user/polls/<%= id %>/edit" method="PUT" class="w-full mt-6 space-y-4">
+                        <%- include('../../includes/alert.ejs') %>
+
+                        <form id="pollForm" action="/user/polls/<%= id %>/update" method="POST" class="w-full mt-6 space-y-4">
 
                             <div class="form-control">
                                 <label for="question">Question</label>
-                                <input type="question" name="question" id="question" placeholder="Enter the question">
-                                <small class="text-red-500 text-xs mt-1" id="questionError"></small>
+                                <input type="question" name="question" id="question"
+                                    placeholder="Enter the question" value="<%= formData?.question %>">
+                                <small class="text-red-500 text-xs mt-1">
+                                    <%= errors?.question %>
+                                </small>
                             </div>
 
                             <div id="options-container" class="form-control">
                                 <label for="options">Options:</label>
-                                <input type="text" class="option-input" name="options[]" placeholder="Enter Option"
-                                    required>
-                                <input type="text" class="option-input" name="options[]" placeholder="Enter Option"
-                                    required>
+                                <input type="text" class="option-input" name="options" placeholder="Enter Option"
+                                    required value="<%= formData?.options[0] %>">
+                                <small class="text-red-500 text-xs mt-1">
+                                    <%= errors['options[0]'] %>
+                                </small>
+                                <input type="text" class="option-input" name="options" placeholder="Enter Option"
+                                    required value="<%= formData?.options[1] %>">
+                                <small class="text-red-500 text-xs mt-1">
+                                    <%= errors['options[1]'] %>
+                                </small>
+
+                                <% if (formData?.options.length> 2) { %>
+                                    <% for (let i=2; i < formData.options.length; i++) { %>
+                                        <div class="flex space-x-2 items-center option-input">
+                                            <input type="text" class="option-input" name="options"
+                                                placeholder="Enter Option" required
+                                                value="<%= formData.options[i] %>">
+                                            <button type="button" class="text-red-500"
+                                                onclick="removeOption(this)">Remove</button>
+                                        </div>
+                                        <small class="text-red-500 text-xs mt-1">
+                                            <%= errors[`options[${i}]`] %>
+                                        </small>
+                                        <% } %>
+                                            <% } %>
                             </div>
-                            <small class="text-red-500 text-xs mt-1" id="optionsError"></small>
 
                             <button type="button" class="btn" onclick="addOption()">Add New Option</button>
 
                             <div class="grid grid-cols-2 gap-4">
                                 <div class="form-control">
                                     <label for="startDate">Start Date:</label>
-                                    <input type="date" id="startDate" name="startDate" required>
+                                    <input type="date" id="startDate" name="startDate" required
+                                        value="<%= formData?.startDate %>">
                                 </div>
 
                                 <div class="form-control">
                                     <label for="endDate">End Date:</label>
-                                    <input type="date" id="endDate" name="endDate" required>
+                                    <input type="date" id="endDate" name="endDate" required
+                                        value="<%= formData?.endDate %>">
                                 </div>
                             </div>
-                            <small class="text-red-500 text-xs mt-1" id="dateError"></small>
+                            <small class="text-red-500 text-xs mt-1">
+                                <%= errors?.startDate || errors?.endDate %>
+                            </small>
 
                             <div class="form-control">
                                 <label for="visibility">Visibility:</label>
                                 <select id="visibility" name="visibility" required>
-                                    <option value="public">Public - Results Visible Immediately</option>
-                                    <option value="private">Private - Results Visible After Poll Ends</option>
+                                    <option value="public" <% if (formData?.visibility==='public' ) { %> selected <%
+                                            } %>>Public - Results Visible Immediately</option>
+                                    <option value="private" <% if (formData?.visibility==='private' ) { %> selected
+                                        <% } %>>Private - Results Visible After Poll Ends
+                                    </option>
                                 </select>
-                                <small class="text-red-500 text-xs mt-1" id="visibilityError"></small>
+                                <small class="text-red-500 text-xs mt-1">
+                                    <%= errors?.visibility %>
+                                </small>
                             </div>
 
                             <div class="pt-2">
-                                <button type="button" class="btn btn-primary w-full"
-                                    onclick="validateAndSubmit()">Save</button>
+                                <button type="submit" class="btn btn-primary w-full">Update
+                                    Poll</button>
                             </div>
 
                         </form>
@@ -67,32 +101,15 @@
                 </div>
 
                 <script>
-                    const showError = (element, message) => {
-                        element.textContent = message;
-                        element.style.display = 'block';
-                    };
+                    // Set the minimum value for the start date input to the current date
+                    const currentDate = new Date().toISOString().split('T')[0];
+                    document.getElementById('startDate').min = currentDate;
 
-                    const hideError = (element) => {
-                        element.textContent = '';
-                        element.style.display = 'none';
-                    };
-
-                    const validateDates = () => {
-                        const startDateInput = document.getElementById('startDate');
-                        const endDateInput = document.getElementById('endDate');
-
-                        const startDate = new Date(startDateInput.value);
-                        const endDate = new Date(endDateInput.value);
-
-                        hideError(document.getElementById('dateError'));
-
-                        if (startDate >= endDate) {
-                            showError(document.getElementById('dateError'), 'End date must be after the start date.');
-                            return false;
-                        }
-
-                        return true;
-                    };
+                    // Set the minimum value for the end date input to one day ahead of the current date
+                    const nextDay = new Date(currentDate);
+                    nextDay.setDate(nextDay.getDate() + 1);
+                    const nextDayString = nextDay.toISOString().split('T')[0];
+                    document.getElementById('endDate').min = nextDayString;
 
                     const addOption = () => {
                         const container = document.getElementById('options-container');
@@ -100,9 +117,9 @@
 
                         if (optionCount >= 2) {
                             const newInput = document.createElement('div');
-                            newInput.className = 'flex space-x-2 items-center option-input-container';
+                            newInput.className = 'flex space-x-2 items-center option-input';
                             newInput.innerHTML = `
-                          <input type="text" class="option-input" name="options[]" placeholder="Enter Option" required>
+                          <input type="text" class="option-input" name="options" placeholder="Enter Option" required>
                           <button type="button" class="text-red-500" onclick="removeOption(this)">Remove</button>
                         `;
 
@@ -117,57 +134,6 @@
                         container.removeChild(button.parentNode);
                     };
 
-                    const submitForm = () => {
-                        if (validateDates()) {
-                            document.getElementById('pollForm').submit();
-                        }
-                    };
-
-                    const validateAndSubmit = () => {
-                        const questionInput = document.getElementById('question');
-                        const optionsContainer = document.getElementById('options-container');
-                        const optionInputs = optionsContainer.querySelectorAll('.option-input');
-
-                        // Reset errors
-                        hideError(document.getElementById('questionError'));
-                        hideError(document.getElementById('optionsError'));
-                        hideError(document.getElementById('dateError'));
-                        hideError(document.getElementById('visibilityError'));
-
-                        let hasError = false;
-
-                        // Validate question
-                        if (!questionInput.value.trim()) {
-                            showError(document.getElementById('questionError'), 'Question is required.');
-                            hasError = true;
-                        }
-
-                        // Validate each option one after the other
-                        for (let i = 0; i < optionInputs.length; i++) {
-                            const optionInput = optionInputs[i];
-                            if (!optionInput || !optionInput.value.trim()) {
-                                showError(document.getElementById('optionsError'), `Option ${i + 1} is required.`);
-                                hasError = true;
-                                break; // Stop further validation if one option is invalid
-                            }
-                        }
-
-                        // Validate at least two options
-                        if (!hasError && optionInputs.length < 2) {
-                            showError(document.getElementById('optionsError'), 'At least two options are required.');
-                            hasError = true;
-                        }
-
-                        // Validate dates
-                        if (!validateDates()) {
-                            hasError = true;
-                        }
-
-                        // Submit the form if no error
-                        if (!hasError) {
-                            document.getElementById('pollForm').submit();
-                        }
-                    };
                 </script>
 
     </body>
